src/snapshots/kindness__tests__choose_unique_by_key.snap
---
source: src/lib.rs
expression: counts
---
[
    1023,
    1025,
    998,
    1004,
    972,
    1006,
    1014,
    971,
    980,
    1007,
    952,
    971,
    1013,
    1057,
    1033,
    1007,
    1005,
    970,
    1017,
    975,
    983,
    994,
    1031,
    997,
    979,
    1071,
    1008,
    984,
    951,
    1002,
    992,
    998,
    959,
    1045,
    1020,
    1028,
    1012,
    955,
    1028,
    963,
    1000,
    1033,
    998,
    1001,
    1005,
    1018,
    998,
    987,
    983,
    977,
    1039,
    985,
    974,
    992,
    1025,
    1019,
    977,
    1030,
    944,
    1015,
    1019,
    990,
    975,
    1070,
    989,
    1007,
    954,
    1002,
    982,
    1012,
    1029,
    962,
    976,
    1048,
    946,
    976,
    945,
    1050,
    1029,
    1039,
    963,
    1038,
    996,
    964,
    968,
    1012,
    1017,
    987,
    1015,
    1040,
    1046,
    1001,
    969,
    955,
    1012,
    990,
    1044,
    960,
    1004,
    1019,
]
