src/snapshots/kindness__tests__random_element_unhinted.snap
---
source: src/lib.rs
expression: counts
---
[
    101,
    93,
    112,
    102,
    98,
    108,
    119,
    87,
    108,
    99,
    102,
    85,
    110,
    105,
    102,
    105,
    103,
    101,
    97,
    112,
    97,
    109,
    97,
    105,
    117,
    107,
    79,
    92,
    101,
    107,
    101,
    99,
    94,
    94,
    80,
    104,
    110,
    107,
    89,
    95,
    91,
    96,
    85,
    111,
    94,
    95,
    107,
    85,
    111,
    91,
    100,
    90,
    113,
    101,
    87,
    104,
    100,
    104,
    102,
    103,
    106,
    90,
    92,
    88,
    118,
    103,
    97,
    92,
    89,
    90,
    112,
    95,
    107,
    105,
    85,
    88,
    101,
    104,
    103,
    103,
    94,
    87,
    118,
    98,
    106,
    104,
    100,
    103,
    89,
    100,
    99,
    107,
    116,
    111,
    94,
    97,
    107,
    91,
    94,
    114,
]
