src/snapshots/kindness__tests__random_element_windowed.snap
---
source: src/lib.rs
expression: counts
---
[
    102,
    103,
    111,
    108,
    94,
    89,
    92,
    103,
    98,
    106,
    92,
    89,
    117,
    97,
    92,
    103,
    116,
    85,
    106,
    99,
    82,
    99,
    103,
    113,
    94,
    97,
    94,
    103,
    90,
    88,
    89,
    115,
    85,
    91,
    108,
    95,
    99,
    96,
    111,
    100,
    100,
    105,
    95,
    100,
    94,
    81,
    95,
    81,
    106,
    112,
    107,
    97,
    112,
    95,
    93,
    87,
    105,
    103,
    99,
    101,
    96,
    110,
    97,
    123,
    102,
    110,
    98,
    107,
    94,
    111,
    122,
    90,
    110,
    98,
    99,
    104,
    97,
    98,
    94,
    103,
    109,
    116,
    94,
    118,
    100,
    91,
    90,
    104,
    93,
    99,
    96,
    90,
    83,
    115,
    104,
    105,
    103,
    100,
    107,
    98,
]
