src/snapshots/kindness__tests__random_element_without_size_hint.snap
---
source: src/lib.rs
expression: counts
---
[
    85,
    103,
    123,
    99,
    93,
    95,
    104,
    104,
    97,
    104,
    115,
    102,
    96,
    106,
    94,
    107,
    80,
    88,
    111,
    103,
    119,
    101,
    98,
    104,
    110,
    107,
    104,
    98,
    113,
    86,
    89,
    104,
    101,
    107,
    96,
    89,
    99,
    103,
    99,
    100,
    107,
    99,
    96,
    108,
    100,
    100,
    98,
    97,
    98,
    85,
    103,
    92,
    97,
    113,
    106,
    102,
    114,
    107,
    98,
    99,
    99,
    121,
    83,
    96,
    100,
    105,
    83,
    100,
    104,
    101,
    93,
    94,
    106,
    100,
    113,
    77,
    119,
    92,
    80,
    104,
    105,
    91,
    109,
    103,
    84,
    100,
    97,
    102,
    87,
    110,
    95,
    111,
    88,
    109,
    96,
    88,
    89,
    103,
    104,
    104,
]
